# LLM-Youtube-Chat

./: README.md  pyproject.toml
chatytt/chains/standard/: conversational_qa_chain.py
chatytt/conf/: config.yaml
chatytt/embeddings/lambda_handlers/: fetch_latest_transcript_embeddings.py
chatytt/vector_store/: pinecone_db.py
chatytt/youtube_data/lambda_handlers/: fetch_latest_video_ids.py  fetch_latest_video_transcripts.py
client/src/: aws-exports.tsx
client/src/components/: Footer.tsx
code_uri/: requirements.txt
deploy/: Makefile  build_code_uri.bat
deploy/chatytt-client/: template.yaml
server/: app.py
