[tool.poetry]
name = "chatytt"
version = "0.1.0"
description = "you tube video chatting"
authors = ["Tanmay Pardhi <tanmaypardhi.26@gmail.com>"]

packages = [
    { include = "chatytt" }
]

[tool.poetry.dependencies]
python = "3.9.13"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "3.7.1"
argcomplete = "3.3.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
aws-wsgi = "0.2.7"
backoff = "2.2.1"
beautifulsoup4 = "4.12.3"
boto3 = "1.35.32"
botocore = "1.35.32"
certifi = "2024.8.30"
cfgv = "3.4.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cohere = "4.57"
colorama = "0.4.6"
commitizen = "3.27.0"
dataclasses-json = "0.6.7"
decli = "0.6.2"
distlib = "0.3.8"
distro = "1.9.0"
dnspython = "2.6.1"
emoji = "2.13.2"
exceptiongroup = "1.2.2"
fastavro = "1.9.7"
filelock = "3.16.1"
filetype = "1.2.0"
flask = "2.1.3"
flask-cors = "4.0.2"
frozenlist = "1.4.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
identify = "2.6.1"
idna = "3.10"
importlib-metadata = "6.11.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jiter = "0.5.0"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain = "0.3.1"
langchain-community = "0.3.1"
langchain-core = "0.3.8"
langchain-openai = "0.2.1"
langchain-pinecone = "0.2.0"
langchain-text-splitters = "0.3.0"
langdetect = "1.0.9"
langsmith = "0.1.130"
loguru = "0.7.2"
lxml = "5.3.0"
markupsafe = "2.1.5"
marshmallow = "3.22.0"
marshmallow-enum = "1.5.1"
multidict = "6.1.0"
mypy = "1.11.2"
mypy-extensions = "1.0.0"
nltk = "3.9.1"
nodeenv = "1.9.1"
numpy = "1.24.4"
openai = "1.51.0"
orjson = "3.10.7"
packaging = "23.2"
pandas = "2.0.3"
pinecone = "5.3.1"
pinecone-client = "5.0.1"
pinecone-plugin-inference = "1.1.0"
pinecone-plugin-interface = "0.0.7"
platformdirs = "4.3.6"
pre-commit = "3.5.0"
prompt-toolkit = "3.0.36"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-iso639 = "2024.4.27"
python-magic = "0.4.27"
pytz = "2024.2"
pyyaml = "6.0.2"
questionary = "2.0.1"
rapidfuzz = "3.9.7"
regex = "2024.9.11"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
ruff = "0.1.15"
s3transfer = "0.10.2"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.35"
tabulate = "0.9.0"
tenacity = "8.5.0"
termcolor = "2.4.0"
tiktoken = "0.7.0"
tomli = "2.0.2"
tomlkit = "0.13.2"
tqdm = "4.66.5"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
unstructured = "0.10.30"
urllib3 = "1.26.20"
virtualenv = "20.26.6"
wcwidth = "0.2.13"
werkzeug = "2.0.3"
win32-setctime = "1.1.0"
yarl = "1.13.1"
youtube-data-api = "0.0.21"
youtube-transcript-api = "0.6.2"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
