[tool.poetry]
name = "chatytt"
version = "0.1.0"
description = "you tube video chatting"
authors = ["Tanmay Pardhi <tanmaypardhi.26@gmail.com>"]

packages = [
    { include = "chatytt" }
]

[tool.poetry.dependencies]
python = "3.9.13"
numpy = "1.24.4"
pandas = "2.0.3"
aws-wsgi = "0.2.7"
boto3 = "1.35.32"
cohere = "4.57"
Werkzeug = "2.2.2"
flask = "2.1.3"
flask-cors = "4.0.2"
langchain = "0.3.1"
langchain-community = "0.3.1"
langchain-core = "0.3.8"
langchain-openai = "0.2.1"
langchain-pinecone = "0.2.0"
langchain-text-splitters = "0.3.0"
openai = "1.51.0"
pinecone = "5.3.1"
pinecone-client = "5.0.1"
pinecone-plugin-inference = "1.1.0"
pinecone-plugin-interface = "0.0.7"
pydantic = "2.9.2"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
tiktoken = "0.7.0"
urllib3 = "1.26.20"
youtube-data-api = "0.0.21"
youtube-transcript-api = "0.6.2"


[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.3"
mypy = "^1.6.1"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
